# todo-list-prioritization

./: .gitignore  LICENSE  README.md  data_generate.py  enhanced_reward_example.py  evaluate_reward_function.py  generate_data.py  generate_enhanced_data.py  main.py  pyproject.toml  quick_test.py  requirements.txt  run_project.sh  simple_rl_evaluation.py  test_reward_comparison.py  train_a2c.py  train_a3c.py  training_evaluation_report.md
config/: config.yaml
data/: tasks.csv  user_behavior.csv
data/enhanced/: users.csv
data/enhanced/test/: tasks.csv  user_behavior.csv
data/enhanced/train/: user_behavior.csv
data/enhanced/validation/: tasks.csv  user_behavior.csv
data/test/: tasks.csv  user_behavior.csv
data/train/: user_behavior.csv
logs/: a2c_training_log.txt  training_log.txt
models/: dqn_model.h5
results/: algorithm_comparison.csv
src/: a2c_agent.py  a3c_agent.py  dqn_agent.py  environment.py  evaluate.py  reward_function.py  simple_reward_function.py  train.py  train_actor_critic.py  utils.py
test/: __init__.py  quick_train_test.py  test_actor_critic_algorithms.py  test_enhanced_reward.py  test_fixes.py  test_simple_reward.py
